fix(guides): limit hero max size in docs
This should prevent the hero taking up so much space that the page headline becomes unreadable.

https://trieloff-patch-1--helix-website--adobe.hlx.page/docs/rum

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1772,6 +1772,7 @@ body.guides-template main.without-full-width-hero .default-content-wrapper h3 {
 body.guides-template main.without-full-width-hero .default-content-wrapper:first-of-type img:first-of-type.doc-detail-hero-image {
   width: 100%;
   height: auto;
+  max-height: 40vh;
   object-fit: cover;
   aspect-ratio: 16 / 9;
   border-radius: var(--image-border-radius-l);
